mon/MDSMonitor: ignore extraneous up:boot messages

An MDS sends up:boot beacons until it sees an MDSMap with it joined.  If
the mons are delaying the proposal, including because of quorum loss, of
the new FSMap, the subsequent up:boot messages would cause the
MDSMonitor to wrongly interpret the booting MDS to replace itself.
Instead, just ignore up:boot messages (as intended) when we know the MDS
has been added to the pending map.

Fixes: https://tracker.ceph.com/issues/59318
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>